--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">Tic-Tac-Toe</string>
-    <string name="play">Play</string>
+    <string name="app_name">TICTACTOE</string>
+    <string name="singlePlayerSettings">Single Player Settings</string>
+    <string name="multiPlayerSettings">Multi Player Settings</string>
+    <string name="singlePlayer">Single Player</string>
+    <string name="multiPlayer">Multi Player</string>
     <string name="Continue">Continue</string>
     <string name="HighScore">High Score</string>
     <string name="Other">Other</string>
@@ -9,4 +12,6 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="playAgain">Play Again</string>
     <string name="turnText">Turn</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
